# easy_ffmpeg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dev notes.md  FindFFMPEG.cmake  README.md  TODO.md  install-ffmpeg-linux.sh  install-ffmpeg-macos.sh
.github/workflows/: build_and_run_tests.yml  release_executables.yml  test_link_dyn_libs.yml
include/easy_ffmpeg/: callbacks.hpp  easy_ffmpeg.hpp  set_fast_seeking_callback.hpp
lib/FFmpeg/windows/: version.md
lib/ffmpeg/: version.md
lib/ffmpeg-macos/lib/: libavdevice.61.dylib  libavfilter.10.dylib  libavformat.61.dylib  libavutil.59.dylib  libswresample.5.dylib  libswscale.8.dylib
lib/ffmpeg-windows/: version.md
src/: VideoDecoder.cpp  VideoDecoder.hpp  VideoReader.cpp  VideoReader.hpp  easy_ffmpeg.cpp
tests/: CMakeLists.txt  expected_frame_0.txt  expected_frame_3.txt  tests.cpp
